Skip to content

deinterlaces modes mean and linear produce ghost effect for text overlay

Tested with vlc-0.9.0-test3-20080724-0004-win32 and only text (haven't tried logo) when you select deinterlace mode mean or linear then a text overlay on screen is drawn twice and you get some ghost effect.

This is seen when you select a new clip (filename briefly shows on bottom) or is more easily reproducable when adding a permanent text through the filter: Video Effects, Vout/Overlay, Add text.

The ghost effect of the title text appears centered, just a bit over the filename. The ghost effect of the add text appears on top of the text but with only half the width and a few pixels offset down.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information