Do not display title on video filter (close #1755).